--- a/src/assets/scss/app-reset.scss
+++ b/src/assets/scss/app-reset.scss
@@ -2,6 +2,12 @@
 .theme--light.v-application {
   background: transparent !important;
   min-height: 0 !important;
+  font-family: "Poppins", sans-serif;
+}
+.nav-header {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600 !important;
+  font-size: 0.8rem !important;
 }
 
 label {
