--- a/src/assets/scss/app-reset.scss
+++ b/src/assets/scss/app-reset.scss
@@ -4,6 +4,12 @@
   min-height: 0 !important;
   font-family: "Poppins", sans-serif;
 }
+
+.main-sidebar,
+.main-header {
+  z-index: 10 !important;
+}
+
 .nav-header {
   font-family: "Poppins", sans-serif;
   font-weight: 600 !important;
