--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -9,3 +9,19 @@
 @import "./app-reset.scss";
 @import "./partials/fonts.scss";
 @import "./partials/button.scss";
+
+.gap-0 {
+  gap: 0 !important;
+}
+
+.gap-1 {
+  gap: 0.25rem !important;
+}
+
+.gap-2 {
+  gap: 0.5rem !important;
+}
+
+.gap-3 {
+  gap: 1rem !important;
+}
