--- a/src/assets/scss/app-reset.scss
+++ b/src/assets/scss/app-reset.scss
@@ -29,11 +29,11 @@ label {
   box-shadow: none !important;
 }
 
-table {
+.table {
   tr {
     th,
     td {
-      vertical-align: top !important;
+      vertical-align: middle !important;
     }
   }
 }
